# protoc-gen-prost

example/build-with-buf/: Cargo.toml
protoc-gen-prost-validate/: Cargo.toml
protoc-gen-prost-validate/src/: generator.rs
